--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,19 +12,35 @@
 
   <body>
     <header>
+      <div>フォトラフ！</div>
     <% if user_signed_in? %>
+      <li>
+        <%= link_to "投稿一覧"%>
+      </li>
+      <li>
+        <%= link_to "マイページ"%>
+      </li>
       <li>
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
       </li>
     <% else %>
+      <li>
+        <%= link_to "投稿一覧"%>
+      </li>
       <li>
         <%= link_to "新規登録", new_user_registration_path %>
       </li>
       <li>
         <%= link_to "ログイン", new_user_session_path %>
       </li>
+      <li>
+        <%= link_to "ゲストログイン"%>
+      </li>
     <% end %>
   </header>
     <%= yield %>
+    <footer>
+      <p>© 2023 Photo_Laugh.All Right Reserved.</p>
+    </footer>
   </body>
 </html>
