--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,9 @@
       <div>フォトラフ！</div>
     <% if user_signed_in? %>
       <li>
+        <%= link_to "投稿する", new_topic_path %>
+      </li>
+      <li>
         <%= link_to "投稿一覧"%>
       </li>
       <li>
