--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -1,4 +1,5 @@
-<h1>画像投稿フォーム</h1>
+<h2>投稿フォーム</h2>
+
   <%= form_with model: @topic do |f| %>
     <h4>画像</h4>
       <%= f.file_field :image, accept: "image/*" %>
