--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,2 +1,11 @@
-<h1>Topics#edit</h1>
-<p>Find me in app/views/topics/edit.html.erb</p>
+<h2>編集画面</h2>
+
+<%= form_with model: @topic,url: topic_path(@topic),method: :patch do |f| %>
+
+  <h4>画像</h4>
+      <%= f.file_field :image, accept: "image/*" %>
+    <h4>お題</h4>
+      <%= f.text_field :title %>
+
+      <%= f.submit '変更する' %>
+  <% end %>
