--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,7 +1,13 @@
+<h2>投稿一覧</h2>
+
 <% @topics.each do |topic| %>
 <div>
   <%= image_tag topic.image %>
-  <p>お題：<%= topic.title %></p>
+  <div>
+    <%= link_to topic_path(topic.id) do %>
+    お題：<%= topic.title %>
+    <% end %>
+  </div>
   <p>ニックネーム：<%= topic.user.name %></p>
 </div>
 <% end %>
