--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
         <%= link_to "投稿一覧",topics_path %>
       </li>
       <li>
-        <%= link_to "マイページ"%>
+        <%= link_to "マイページ", user_path(current_user.id) %>
       </li>
       <li>
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
