--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,6 +16,7 @@
     <% end %>
   </div>
   <p>ニックネーム：<%= topic.user.name %></p>
+  <%= link_to "#{topic.post_comments.count} コメント", topic_path(topic.id) %>
  </div>
   <% end %>
 </div>
