--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -2,7 +2,7 @@
 
 <% @topics.each do |topic| %>
 <div>
-  <%= image_tag topic.image %>
+  <%= image_tag topic.image,size: "300x300" %>
   <div>
     <%= link_to topic_path(topic.id) do %>
     お題：<%= topic.title %>
