--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,14 +9,14 @@
 <div>
   <% @topics.each do |topic| %>
  <div>
-  <%= image_tag topic.image %>
+  <%= image_tag topic.image,size: "300x300" %>
   <div>
     <%= link_to topic_path(topic.id) do %>
     お題：<%= topic.title %>
     <% end %>
   </div>
   <p>ニックネーム：<%= topic.user.name %></p>
-  <%= link_to "#{topic.post_comments.count} コメント", topic_path(topic.id) %>
+  <%= link_to "#{topic.topic_comments.count} コメント", topic_path(topic.id) %>
  </div>
   <% end %>
 </div>
