--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,7 @@
   ニックネーム<%= @user.name %>
   メールアドレス<%= @user.email %>
   <%= link_to "編集",edit_user_path(@user) %>
+  <%=link_to"いいね一覧",likes_user_path(@user) %>
 </div>
 
 <div>
