--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,6 +21,7 @@
       <%= f.submit "検索" %>
       <% end %>
     <% if user_signed_in? %>
+    <p>ようこそ！<%= current_user.name %>さん</p>
       <li>
         <%= link_to "投稿する", new_topic_path %>
       </li>
