--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -13,37 +13,9 @@
 </div>
 
 <div>
-  ボケ件数：<%= @topic.topic_comments.count %>
-  <% @topic.topic_comments.each do |topic_comment| %><br>
-  <%= topic_comment.user.name %><br>
-  <%= topic_comment.created_at.strftime('%Y/%m/%d') %><%= topic_comment.comment %>
-
- <!--ログインしていないユーザーにはいいね数のみ表示-->
- <%if user_signed_in? %>
-    <% if Like.find_by(user_id: current_user.id, topic_id: @topic.id, topic_comment_id: topic_comment.id) %>
-        <%= link_to  topic_topic_comment_like_path(@topic, topic_comment, topic_comment.likes), {class: "like-link", method: :delete } do %>
-         <i class="fas fa-heart" aria-hidden="true" style="color: red;"></i>
-        <% end %>
-        <p><%= topic_comment.likes.count %>いいね！</p>
-    <% else %>
-        <%= link_to topic_topic_comment_likes_path(@topic, topic_comment), {class: "like-link", method: :post } do %>
-          <i class="fas fa-heart" aria-hidden="true"></i>
-        <% end %>
-        <p><%= topic_comment.likes.count %>いいね！</p>
-    <% end %>
-  <% else %>
-      <p><%= topic_comment.likes.count %>いいね！</p>
-  <% end %>
-
-   <% if topic_comment.user == current_user %>
-      <%= link_to "削除", topic_topic_comment_path(topic_comment.topic, topic_comment), method: :delete %>
-   <% end %>
-  <% end %>
+ <%= render 'likes/btn', topic: @topic %>
 </div>
 
 <div>
-  <%= form_with model: [@topic, @topic_comment] do |f| %>
-  <%= f.text_area :comment, rows: '5', placeholder: "ボケを投稿する！" %>
-  <%= f.submit "ボケる" %>
-  <% end %>
+  <%= render 'topic_comments/form', topic: @topic,topic_comment: @topic_comment %>
 </div>
