--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,5 +1,7 @@
 <h2>編集画面</h2>
 
+<%= render 'layouts/errors',obj: @topic %>
+
 <%= form_with model: @topic,url: topic_path(@topic),method: :patch do |f| %>
 
   <h4>画像</h4>
