--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,7 @@
 <h2>ユーザー情報編集</h2>
 
+<%= render 'layouts/errors',obj: @user %>
+
 <%= form_with model: @user do |f| %>
 
 ニックネーム<%= f.text_field :name %>
