--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,1 +1,5 @@
- <p>© 2023 Photo_Laugh.All Right Reserved.</p>
+<footer class="bg-light py-3">
+  <div class="container text-center">
+    <p class="mb-0">© 2023 Photo_Laugh.All Right Reserved.</p>
+  </div>
+</footer>
