--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,28 +1,45 @@
- <% if user_signed_in? %>
-    <p>ようこそ！<%= current_user.name %>さん</p>
-      <li>
-        <%= link_to "投稿する", new_topic_path %>
-      </li>
-      <li>
-        <%= link_to "投稿一覧",topics_path %>
-      </li>
-      <li>
-        <%= link_to "マイページ", user_path(current_user.id) %>
-      </li>
-      <li>
-        <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-      </li>
-    <% else %>
-      <li>
-        <%= link_to "投稿一覧",topics_path %>
-      </li>
-      <li>
-        <%= link_to "新規登録", new_user_registration_path %>
-      </li>
-      <li>
-        <%= link_to "ログイン", new_user_session_path %>
-      </li>
-      <li>
-        <%= link_to "ゲストログイン"%>
-      </li>
+<header>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <%= link_to root_path do %>
+    <%= image_tag 'image_2.png',size: '200x100',class: "navbar-brand" %>
     <% end %>
+    <%= form_with url: search_path,method: :get, class: "form-inline" do |f| %>
+    <%= f.text_field :word,placeholder: "検索したいキーワードを入力", class: "form-control mr-sm-2 mb-2 mb-sm-0", style: "width: 300px;" %>
+    <%= f.submit "検索", class: "btn btn-outline-success my-2 my-sm-0" %>
+    <% end %>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <% if user_signed_in? %>
+          <li class="nav-item">
+            <%= link_to "投稿する", new_topic_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "投稿一覧", topics_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "マイページ", user_path(current_user.id), class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link", data: { confirm: "本当にログアウトしますか？" } %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "投稿一覧", topics_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "新規登録", new_user_registration_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "ログイン", new_user_session_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "ゲストログイン", class: "nav-link" %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </nav>
+</header>
