--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,17 @@
-<h1>トップページ</h1>
-
+<div class="container d-flex justify-content-center align-items-center vh-100">
+  <div class="card bg-light text-dark w-75">
+    <%= image_tag 'top.image.jpg', class: 'card-img', alt: 'image', style: 'object-position: center; object-fit: contain;' %>
+    <div class="card-img-overlay d-flex flex-column justify-content-center align-items-center">
+      <p class="card-text text-center h4">
+        SNSには上げられない、なぜ撮ったのか覚えていない、<br>
+        そんなフォルダの「肥やし」になってしまっている写真を<br>
+        お題とともに投稿しよう！<br>
+        みんなにボケてもらい、写真に新たな価値を！！
+      </p>
+      <div class="d-flex flex-column justify-content-center align-items-center">
+        <%= link_to "投稿する！", new_topic_path, class: "btn btn-lg btn-success btn-block mt-3 px-5" %>
+        <%= link_to "ボケに行く！", topics_path, class: "btn btn-lg btn-primary btn-block mt-3 px-5 " %>
+      </div>
+    </div>
+  </div>
+</div>
