--- a/app/views/topics/_index.html.erb
+++ b/app/views/topics/_index.html.erb
@@ -1,14 +1,18 @@
-<div>
-  <% topics.each do |topic| %>
- <div>
-  <%= image_tag topic.image,size: "300x300" %>
-  <div>
-    <%= link_to topic_path(topic.id) do %>
-    お題：<%= topic.title %>
+<div class="container">
+  <div class="row">
+    <% topics.each do |topic| %>
+      <div class="col-md-4 mb-4">
+        <div class="card">
+          <%= image_tag topic.image, class: "card-img-top", alt: "image", style: "height: 200px; object-fit: cover;" %>
+          <div class="card-body">
+            <%= link_to topic_path(topic.id), class: "text-dark text-decoration-none" do %>
+              <h5 class="card-title mb-3">お題： <%= topic.title %></h5>
+            <% end %>
+            <p class="card-text">ニックネーム：<%= topic.user.name %></p>
+            <%= link_to "#{topic.topic_comments.count} コメント", topic_path(topic.id), class: "btn btn-primary" %>
+          </div>
+        </div>
+      </div>
     <% end %>
   </div>
-  <p>ニックネーム：<%= topic.user.name %></p>
-  <%= link_to "#{topic.topic_comments.count} コメント", topic_path(topic.id) %>
- </div>
-  <% end %>
 </div>
