[Add]投稿詳細画面レイアウト

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require_tree .
  *= require_self
  */
+
+.pagination {
+  display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+}
