--- a/app/views/topics/_index.html.erb
+++ b/app/views/topics/_index.html.erb
@@ -14,9 +14,6 @@
         </div>
       </div>
     <% end %>
-   <nav aria-label="Page navigation example">
-    <%= paginate topics, previous_label: 'Previous', next_label: 'Next', class: "pagination" %>
-   </nav>
-
+    <%= paginate topics %>
   </div>
 </div>
