--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,17 +1,21 @@
 <h2>投稿詳細</h2>
 
-<%= render 'layouts/errors',obj: @topic_comment %>
+<%= render 'layouts/errors', obj: @topic_comment %>
 
-<div>
-  <%= image_tag @topic.image,size: "300x300" %>
-  <p>お題：<%= @topic.title %></p>
-  <p>ニックネーム：<%= @topic.user.name %></p>
-  <p>投稿日：<%= @topic.created_at.strftime('%Y/%m/%d') %></p>
+<div class="row">
+  <div class="col-md-6">
+    <%= image_tag @topic.image, class: "img-fluid rounded" %>
+  </div>
+  <div class="col-md-6">
+    <h2 class="mt-3"><%= @topic.title %></h2>
+    <p class="mb-1"><%= @topic.user.name %></p>
+    <p class="mb-3"><%= @topic.created_at.strftime('%Y/%m/%d') %></p>
 
-  <% if @topic.user == current_user %>
-    <%= link_to "編集", edit_topic_path(@topic) %>
-    <%= link_to "削除", topic_path(@topic), method: :delete %>
-  <% end %>
+    <% if @topic.user == current_user %>
+      <%= link_to "編集", edit_topic_path(@topic), class: "btn btn-primary mr-2" %>
+      <%= link_to "削除", topic_path(@topic), method: :delete, class: "btn btn-danger" %>
+    <% end %>
+  </div>
 </div>
 
 <div>
