--- a/app/views/likes/_btn.html.erb
+++ b/app/views/likes/_btn.html.erb
@@ -22,7 +22,7 @@
         <% end %>
 
         <% if topic_comment.user == current_user %>
-          <%= link_to "削除", topic_topic_comment_path(topic_comment.topic, topic_comment), method: :delete, class: "btn btn-danger ml-3" %>
+          <%= link_to "コメントを削除", topic_topic_comment_path(topic_comment.topic, topic_comment), method: :delete, class: "btn btn-danger ml-3" %>
         <% end %>
       </div>
     </div>
