--- a/app/views/topic_comments/_form.html.erb
+++ b/app/views/topic_comments/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_with model: [topic, topic_comment], class: "my-4" do |f| %>
-    <%= f.text_area :comment, rows: '5', placeholder: "ボケを投稿する！", class: "form-control mb-2" %>
+    <%= f.text_area :comment, rows: '5', placeholder: "ボケを投稿入力してください", class: "form-control mb-2" %>
     <%= f.submit "ボケる", class: "btn btn-primary" %>
   <% end %>
 </div>
