--- a/app/views/topics/_index.html.erb
+++ b/app/views/topics/_index.html.erb
@@ -3,17 +3,17 @@
     <% topics.each do |topic| %>
       <div class="col-md-4 mb-4">
         <div class="card">
-          <%= image_tag topic.image, class: "card-img-top", alt: "image", style: "height: 200px; object-fit: cover;" %>
+          <%= link_to topic_path(topic.id), class: "text-dark text-decoration-none" do %>
+            <%= image_tag topic.image, class: "card-img-top", alt: "image", style: "height: 200px; object-fit: cover;" %>
+          <% end %>
           <div class="card-body">
-            <%= link_to topic_path(topic.id), class: "text-dark text-decoration-none" do %>
-              <h5 class="card-title mb-3">お題： <%= topic.title %></h5>
-            <% end %>
+            <h5 class="card-title mb-3">お題： <%= topic.title %></h5>
             <p class="card-text">ニックネーム：<%= topic.user.name %></p>
-            <%= link_to "#{topic.topic_comments.count} コメント", topic_path(topic.id), class: "btn btn-primary" %>
+            <%= link_to "#{topic.topic_comments.count} コメント", topic_path(topic.id), class: "btn btn-primary btn-sm" %>
           </div>
         </div>
       </div>
     <% end %>
-    <%= paginate topics %>
+    <%= paginate topics, class: "justify-content-center" %>
   </div>
 </div>
