--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,23 @@
-<h2>ユーザー情報編集</h2>
-
-<%= render 'layouts/errors',obj: @user %>
-
-<%= form_with model: @user do |f| %>
-
-ニックネーム<%= f.text_field :name %>
-メールアドレス<%= f.email_field :email %>
-<%= f.submit "変更する" %>
-
-<% end %>
+<div class="container">
+  <div class="row justify-content-center mt-5">
+    <div class="col-md-6">
+      <div class="card shadow-lg">
+        <div class="card-body">
+          <h2 class="card-title mb-4">ユーザー情報編集</h2>
+          <%= render 'layouts/errors', obj: @user %>
+          <%= form_with model: @user, class: "mt-4" do |f| %>
+            <div class="mb-3">
+              <%= f.label :name, class: "form-label" %>
+              <%= f.text_field :name, class: "form-control" %>
+            </div>
+            <div class="mb-3">
+              <%= f.label :email, class: "form-label" %>
+              <%= f.email_field :email, class: "form-control" %>
+            </div>
+            <%= f.submit "変更する", class: "btn btn-primary" %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
