--- a/app/views/topics/edit.html.erb
+++ b/app/views/topics/edit.html.erb
@@ -1,13 +1,23 @@
-<h2>編集画面</h2>
-
-<%= render 'layouts/errors',obj: @topic %>
-
-<%= form_with model: @topic,url: topic_path(@topic),method: :patch do |f| %>
-
-  <h4>画像</h4>
-      <%= f.file_field :image, accept: "image/*" %>
-    <h4>お題</h4>
-      <%= f.text_field :title %>
-
-      <%= f.submit '変更する' %>
-  <% end %>
+<div class="container my-5">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card p-4">
+        <h2 class="mb-4">投稿編集画面</h2>
+        <%= render 'layouts/errors', obj: @topic %>
+        <%= form_with model: @topic, url: topic_path(@topic), method: :patch, html: {class: "form-group"} do |f| %>
+          <h4 class="mb-3">画像</h4>
+          <div class="mb-3">
+            <%= f.file_field :image, accept: "image/*" %>
+          </div>
+          <h4 class="mb-3">お題</h4>
+          <div class="mb-3">
+            <%= f.text_field :title, class: "form-control" %>
+          </div>
+          <div class="text-center">
+            <%= f.submit '変更する', class: "btn btn-primary" %>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
