--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,42 @@
-<h2>Sign up</h2>
-
-<%= form_with model: @user, url: user_registration_path do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-8 col-lg-6">
+      <div class="card mt-5">
+        <div class="card-header">
+          <h2 class="text-center mb-0">新規会員登録</h2>
+        </div>
+        <div class="card-body">
+          <%= form_with model: @user, url: user_registration_path do |f| %>
+            <%= render "devise/shared/error_messages", resource: resource %>
+            <div class="form-group">
+              <%= f.label :name, class: "font-weight-bold" %>
+              <%= f.text_field :name, class: "form-control", required: true %>
+            </div>
+            <div class="form-group">
+              <%= f.label :email, class: "font-weight-bold" %>
+              <%= f.email_field :email, class: "form-control", autofocus: true, autocomplete: "email", required: true %>
+            </div>
+            <div class="form-group">
+              <%= f.label :password, class: "font-weight-bold" %>
+              <% if @minimum_password_length %>
+                <small>(<%= @minimum_password_length %>文字以上)</small>
+              <% end %>
+              <%= f.password_field :password, class: "form-control", autocomplete: "new-password", required: true %>
+            </div>
+            <div class="form-group">
+              <%= f.label :password_confirmation, class: "font-weight-bold" %>
+              <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password", required: true %>
+            </div>
+            <div class="form-group">
+              <%= f.submit "新規登録", class: "btn btn-primary btn-block" %>
+            </div>
+          <% end %>
+          <hr>
+          <div class="text-center">
+            <%= render "devise/shared/links" %>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
