--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,17 +1,19 @@
-<div class="container d-flex justify-content-center align-items-center vh-100">
-  <div class="card bg-light text-dark w-75">
-    <%= image_tag 'top.image.jpg', class: 'card-img', alt: 'image', style: 'object-position: center; object-fit: contain;' %>
-    <div class="card-img-overlay d-flex flex-column justify-content-center align-items-center">
-      <p class="card-text text-center h4">
-        SNSには上げられない、なぜ撮ったのか覚えていない、<br>
-        そんなフォルダの「肥やし」になってしまっている写真を<br>
-        お題とともに投稿しよう！<br>
-        みんなにボケてもらい、写真に新たな価値を！！
-      </p>
-      <div class="d-flex flex-column justify-content-center align-items-center">
-        <%= link_to "投稿する！", new_topic_path, class: "btn btn-lg btn-success btn-block mt-5 px-5" %>
-        <%= link_to "ボケに行く！", topics_path, class: "btn btn-lg btn-primary btn-block mt-5 px-5 " %>
+<div class="container-fluid d-flex justify-content-center align-items-center" style="min-height: 100vh;">
+  <div class="card bg-light text-dark" style="width: 100%;">
+    <div class="position-relative">
+      <%= image_tag 'top.jpg', class: 'card-img', alt: 'image', style: 'object-position: center; object-fit: cover; position: relative; width: 100%; max-height: 50vh;' %>
+      <div class="card-img-overlay d-flex flex-column justify-content-center align-items-center" style="color: #ffffff;">
+        <p class="card-text text-center h3">
+          SNSには上げられない、なぜ撮ったのか覚えていない、<br>
+          そんなフォルダの「肥やし」になってしまっている写真を<br>
+          お題とともに投稿しよう！<br>
+          みんなにボケてもらい、写真に新たな価値を！！
+        </p>
       </div>
+    </div>
+    <div class="d-flex justify-content-center align-items-center flex-wrap p-3">
+      <%= link_to "投稿する！", new_topic_path, class: "btn btn-lg btn-success me-3 mb-3 rounded-pill px-5 py-3" %>
+      <%= link_to "ボケに行く！", topics_path, class: "btn btn-lg btn-primary mb-3 rounded-pill px-5 py-3" %>
     </div>
   </div>
 </div>
