[Update]各ページの見出しレイアウト

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -7,8 +7,8 @@
           フォトラフ！は<br>
           SNSには上げられない、なぜ撮ったのか覚えていない、<br>
           そんなフォルダの「肥やし」になってしまっている写真を<br>
-          お題とともに投稿しよう！<br>
-          みんなにボケてもらい、写真に新たな価値を！！
+          お題とともに投稿するサイトです<br>
+          みんなにボケてもらい、写真に新たな価値を！
         </p>
       </div>
     </div>
