--- a/app/views/topics/search.html.erb
+++ b/app/views/topics/search.html.erb
@@ -1,4 +1,4 @@
-<h2 class="text-center mb-4">検索結果</h2>
+<h2 class="text-center mb-4 w-25 h4 bg-light d-inline-block">検索結果</h2>
 
 <div class="row justify-content-center">
   <% if @topics.any? %>
