--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,4 +1,4 @@
-<h2>投稿詳細</h2>
+<h2 class="text-center w-25 h4 bg-light d-inline-block">投稿詳細</h2>
 
 <%= render 'layouts/errors', obj: @topic_comment %>
 
