--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="col-md-6">
       <div class="card shadow-lg">
         <div class="card-body">
-          <h2 class="card-title mb-4">ユーザー情報編集</h2>
+          <h2 class="card-title mb-4 text-center w-30 h4 bg-light d-inline-block">ユーザー情報編集</h2>
           <%= render 'layouts/errors', obj: @user %>
           <%= form_with model: @user, class: "mt-4" do |f| %>
             <div class="mb-3">
