--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 class="mb-4">マイページ</h2>
+  <h2 class="mb-4 text-center w-25 h4 bg-light d-inline-block">マイページ</h2>
   <div class="row mb-4">
     <div class="col-md-6">
       <div class="card">
@@ -23,6 +23,6 @@
     <%= link_to "プロフィール編集", edit_user_path(@user), class: "btn btn-primary" %>
     <%= link_to "いいね一覧", likes_user_path(@user), class: "btn btn-secondary" %>
   </div>
-  <h2 class="mb-4">自分の投稿</h2>
+  <h2 class="mb-4 text-center w-25 h4 bg-light d-inline-block">自分の投稿</h2>
   <%= render 'topics/index', topics: @topics %>
 </div>
