--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -37,7 +37,7 @@
             <%= link_to "ログイン", new_user_session_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "ゲストログイン", class: "nav-link" %>
+            <%= link_to "ゲストログイン",users_guest_sign_in_path,method: :post, class: "nav-link" %>
           </li>
         <% end %>
       </ul>
