--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -12,8 +12,8 @@
     <p class="mb-3"><%= @topic.created_at.strftime('%Y/%m/%d') %></p>
 
     <% if @topic.user == current_user %>
-      <%= link_to "編集", edit_topic_path(@topic), class: "btn btn-primary" %>
-      <%= link_to "削除", topic_path(@topic), method: :delete, data: { confirm: "本当に削除しますか？" },class: "btn btn-danger" %>
+      <%= link_to "投稿を編集", edit_topic_path(@topic), class: "btn btn-primary" %>
+      <%= link_to "投稿を削除", topic_path(@topic), method: :delete, data: { confirm: "本当に削除しますか？" },class: "btn btn-danger" %>
     <% end %>
   </div>
 </div>
