[Fix]いいね一覧

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
     <% if @user.name != "guestuser" %>
     <%= link_to "プロフィール編集", edit_user_path(@user), class: "btn btn-primary" %>
     <% end %>
-    <%= link_to "いいね一覧", likes_user_path(@user), class: "btn btn-secondary" %>
+    <%= link_to "いいね一覧", liked_comments_path(@user), class: "btn btn-secondary" %>
   </div>
   <h2 class="mb-4 text-center w-25 h4 bg-light d-inline-block">自分の投稿</h2>
   <%= render 'topics/index', topics: @topics %>
