--- a/app/views/topic_comments/liked_comments.html.erb
+++ b/app/views/topic_comments/liked_comments.html.erb
@@ -1,12 +1,12 @@
+<div class="container my-5">
 <h2 class="mb-4 text-center w-25 h4 bg-light d-inline-block">いいね一覧</h2>
-
 <% @comments.each do |topic_comment| %>
-
-<div>
-<%= link_to topic_comment.comment, topic_path(topic_comment.topic) %>
-<%= topic_comment.user.name %>
-<%= topic_comment.created_at.strftime('%Y/%m/%d') %>
+    <div class="card my-3">
+      <div class="card-body">
+        <h5 class="card-title"><%= link_to topic_comment.comment, topic_path(topic_comment.topic), class: "text-primary" %></h5>
+        <p class="card-text mb-1"><%= topic_comment.user.name %></p>
+        <p class="card-text"><%= topic_comment.created_at.strftime('%Y/%m/%d') %></p>
+      </div>
+    </div>
+  <% end %>
 </div>
-
-
-<% end %>
