--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -22,6 +22,6 @@
  <%= render 'likes/btn', topic: @topic %>
 </div>
 
-<div>
+<div id="comment_area">
   <%= render 'topic_comments/form', topic: @topic,topic_comment: @topic_comment %>
 </div>
