--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -31,7 +31,7 @@
             <%= link_to "投稿一覧", topics_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
-            <%= link_to "新規登録", new_user_registration_path, class: "nav-link" %>
+            <%= link_to "新規会員登録", new_user_registration_path, class: "nav-link" %>
           </li>
           <li class="nav-item">
             <%= link_to "ログイン", new_user_session_path, class: "nav-link" %>
