--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,22 +10,22 @@
             <%= render "devise/shared/error_messages", resource: resource %>
             <div class="form-group">
               <%= f.label :name, class: "font-weight-bold" %>
-              <%= f.text_field :name, class: "form-control", required: true %>
+              <%= f.text_field :name, class: "form-control" %>
             </div>
             <div class="form-group">
               <%= f.label :email, class: "font-weight-bold" %>
-              <%= f.email_field :email, class: "form-control", autofocus: true, autocomplete: "email", required: true %>
+              <%= f.email_field :email, class: "form-control",autocomplete: "email" %>
             </div>
             <div class="form-group">
               <%= f.label :password, class: "font-weight-bold" %>
               <% if @minimum_password_length %>
                 <small>(<%= @minimum_password_length %>文字以上)</small>
               <% end %>
-              <%= f.password_field :password, class: "form-control", autocomplete: "new-password", required: true %>
+              <%= f.password_field :password, class: "form-control", autocomplete: "new-password" %>
             </div>
             <div class="form-group">
               <%= f.label :password_confirmation, class: "font-weight-bold" %>
-              <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password", required: true %>
+              <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" %>
             </div>
             <div class="form-group">
               <%= f.submit "新規登録", class: "btn btn-primary btn-block" %>
