[Fix]コメントのバリデーション、ページネーション

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,10 +13,7 @@
  *= require_tree .
  *= require_self
  */
-
-.pagination {
-  display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: center;
+.page {
+    display: flex;
+    justify-content: center;
 }
