--- a/app/views/topics/_index.html.erb
+++ b/app/views/topics/_index.html.erb
@@ -14,8 +14,8 @@
         </div>
       </div>
     <% end %>
-    <div class="mx-auto">
-      <%= paginate topics %>
-    </div>
+  </div>
+  <div class="page">
+    <%= paginate topics %>
   </div>
 </div>
