--- a/app/views/likes/button.js.erb
+++ b/app/views/likes/button.js.erb
@@ -1,1 +1,1 @@
- $('#like_buttons_<%= @topic.id %>').html("<%= j(render "likes/btn", topic: @topic) %>");
+ $("#like_buttons_<%= @topic.id %>").html("<%= j(render "likes/btn", topic: @topic) %>");
