--- a/app/views/topic_comments/comment.js.erb
+++ b/app/views/topic_comments/comment.js.erb
@@ -1,5 +1,5 @@
-$('#comment_area').html("<%= j(render 'topic_comments/form', topic: @topic, topic_comment: @topic_comment) %>");
+$("#comment_area").html("<%= j(render "topic_comments/form", topic: @topic, topic_comment: @topic_comment) %>");
 
-$('#like_buttons_<%= @topic.id %>').html("<%= j(render 'likes/btn', topic: @topic) %>");
+$("#like_buttons_<%= @topic.id %>").html("<%= j(render "likes/btn", topic: @topic) %>");
 
 $("#comment_error").html("");
