--- a/app/views/topic_comments/error.js.erb
+++ b/app/views/topic_comments/error.js.erb
@@ -1,1 +1,1 @@
-$("#comment_error").html("<%= j(render 'layouts/errors', obj: @topic_comment) %>");
+$("#comment_error").html("<%= j(render "layouts/errors", obj: @topic_comment) %>");
