--- a/app/views/topic_comments/liked_comments.html.erb
+++ b/app/views/topic_comments/liked_comments.html.erb
@@ -1,5 +1,5 @@
 <div class="container my-5">
-<h2 class="mb-4 text-center w-25 h4 bg-light d-inline-block">いいね一覧</h2>
+<h2 class="mb-4 text-center w-30 h4 bg-light">いいね一覧</h2>
 <% @comments.each do |topic_comment| %>
     <div class="card my-3">
       <div class="card-body">
