--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="row justify-content-center">
     <div class="col-md-6">
-      <h2 class="text-center mb-4 w-30 h4 bg-light d-inline-block">投稿フォーム</h2>
+      <h2 class="text-center mb-4 w-30 h4 bg-light">投稿フォーム</h2>
       <%= render 'layouts/errors', obj: @topic %>
       <%= form_with model: @topic, html: { class: "mt-4" } do |f| %>
         <div class="form-group">
