--- a/app/views/topics/_index.html.erb
+++ b/app/views/topics/_index.html.erb
@@ -3,8 +3,8 @@
     <% topics.each do |topic| %>
       <div class="col-md-4 mb-4">
         <div class="card">
-          <%= link_to topic_path(topic.id), class: "text-dark text-decoration-none" do %>
-            <%= image_tag topic.image, class: "card-img-top", alt: "image", style: "height: 200px; object-fit: cover;" %>
+          <%= link_to topic_path(topic.id), class: "text-dark" do %>
+            <%= image_tag topic.image, class: "card-img-top", style: "height: 200px; object-fit: cover;" %>
           <% end %>
           <div class="card-body">
             <h5 class="card-title mb-3">お題： <%= topic.title %></h5>
