--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,3 +1,3 @@
-<h2 class="text-center w-25 h4 bg-light d-inline-block">投稿一覧</h2>
+<h2 class="text-center w-25 h4 bg-light">投稿一覧</h2>
 
 <%= render 'topics/index', topics: @topics %>
