--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,4 +1,4 @@
-<h2 class="text-center w-25 h4 bg-light d-inline-block">投稿詳細</h2>
+<h2 class="text-center w-25 h4 bg-light">投稿詳細</h2>
 
 <div class="row">
   <div class="col-md-6">
@@ -7,7 +7,7 @@
   <div class="col-md-6">
     <h2 class="mt-3"><%= @topic.title %></h2>
     <p class="mb-1"><%= @topic.user.name %></p>
-    <p class="mb-3"><%= @topic.created_at.strftime('%Y/%m/%d') %></p>
+    <p class="mb-3"><%= @topic.created_at.strftime("%Y/%m/%d") %></p>
 
     <% if @topic.user == current_user %>
       <%= link_to "投稿を編集", edit_topic_path(@topic), class: "btn btn-primary" %>
