--- a/app/views/topics/new.html.erb
+++ b/app/views/topics/new.html.erb
@@ -10,7 +10,7 @@
         </div>
         <div class="form-group">
           <h4 class="mb-2">お題</h4>
-          <%= f.text_field :title, placeholder: "お題を入力しよう！", class: "form-control" %>
+          <%= f.text_field :title, placeholder: "2文字以上、30文字以内で入力してください", class: "form-control" %>
         </div>
         <%= f.submit '投稿', class: "btn btn-primary btn-lg btn-block mt-4" %>
       <% end %>
